@@ -1062,7 +1062,9 @@ TclInvertOpCmd(
 	Tcl_WrongNumArgs(interp, 1, objv, "number");
 	return TCL_ERROR;
     }
-    if (TclGetNumberFromObj(interp, objv[1], &val, &type) != TCL_OK) {
+    if (TclGetNumberFromObj(NULL, objv[1], &val, &type) != TCL_OK) {
+	Tcl_SetObjResult(interp, Tcl_NewStringObj(
+		"can't use non-numeric string as operand of \"~\"", -1));
 	return TCL_ERROR;
     }
     switch (type) {
@@ -1137,7 +1139,16 @@ TclNotOpCmd(
 	Tcl_WrongNumArgs(interp, 1, objv, "boolean");
 	return TCL_ERROR;
     }
-    if (Tcl_GetBooleanFromObj(interp, objv[1], &b) != TCL_OK) {
+    if (Tcl_GetBooleanFromObj(NULL, objv[1], &b) != TCL_OK) {
+	int type;
+	ClientData val;
+	if (TclGetNumberFromObj(NULL, objv[1], &val, &type) == TCL_OK) {
+	    Tcl_SetObjResult(interp, Tcl_NewStringObj(
+		    "can't use non-numeric floating-point value as operand of \"!\"", -1));
+	} else {
+	    Tcl_SetObjResult(interp, Tcl_NewStringObj(
+		    "can't use non-numeric string as operand of \"!\"", -1));
+	}
 	return TCL_ERROR;
     }
     Tcl_SetBooleanObj(Tcl_GetObjResult(interp), !b);
