@@ -1,3 +1,8 @@
+2006-12-08  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclMathOp.c:	More revisions to make tests pass.
+	* tests/mathop.test:
+
 2006-12-08  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>
 
 	* generic/tclNamesp.c (TclTeardownNamespace): Ensure that dying
